# deep-eval-course

./: .env.example  .gitignore  BUILD_PLAN.md  README.md  guide.md  package.json  pyproject.toml
app/: assistant.py  fallback.py  graph.py  prompts.py  state.py  trace_schema.py  tracing.py
data/backend/: customers.json  policies.json  shipments.json
docs/: assistant_spec.md  setup.md
docs/demos/: README.md
remotion/: README.md  package-lock.json  package.json
remotion/scripts/: render-episode.mjs  sync-episodes.mjs
remotion/src/: Episode.tsx  Root.tsx  constants.ts  episodeRegistry.ts  theme.ts  types.ts
remotion/src/components/: AnimatedElement.tsx  BrandedBackground.tsx  CaptionOverlay.tsx  InfographicSteps.tsx
remotion/src/scenes/: ConceptExplainScene.tsx  KeyTakeawayScene.tsx  QuestionHookScene.tsx  SceneRenderer.tsx  SeriesIntroScene.tsx  SeriesOutroScene.tsx
remotion/src/utils/: animations.ts
sections/02_the_assistant_we_are_building/04_grounded_responses_and_safe_fallback/: 05_demo_grounded_responses_and_safe_fallback.md
sections/03_instrumentation_and_failure_capture/02_trace_and_event_structure/: 01_demo_langsmith_tracing_and_trace_schema.md
series/learn-ai-in-2-mins/: README.md  visual-style.md
series/learn-ai-in-2-mins/catalog/: topics.yaml
series/learn-ai-in-2-mins/schema/: episode.schema.json
series/learn-ai-in-2-mins/scripts/: generate-episodes.mjs
series/learn-ai-in-2-mins/templates/: outro.yaml  welcome.yaml  (+1 more)
tools/: __init__.py  backend_store.py  escalation.py  order_history.py  policy_lookup.py  shipment_lookup.py
(+26 files in other folders)
