[project]
name = "deep-eval-course"
version = "0.1.0"
description = "Shipping support assistant + DeepEval harness built across the Deep Evals course"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "deepeval>=2.0",
    "streamlit>=1.38",
    "langsmith>=0.1",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pytest>=8.0",
]

[tool.uv]
package = false
